--- a/Src/DiceGame/App.xaml
+++ b/Src/DiceGame/App.xaml
@@ -2,12 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DiceGame"
-             xmlns:eddyfi="http://schemas.eddyfi.com/wpf"
-             StartupUri="MainWindow.xaml">
+             xmlns:eddyfi="http://schemas.eddyfi.com/wpf">
   <Application.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="pack://application:,,,/Eddyfi.Core.Themes.Wpf;component/Themes/LightTheme.xaml" />
         <eddyfi:BundledTheme IsTouch="{eddyfi:LocalConfigStorage Configuration.IsTouch}" Theme="Light" />
         <ResourceDictionary Source="pack://application:,,,/Eddyfi.Core.Themes.Wpf;component/Themes/Defaults.xaml" />
       </ResourceDictionary.MergedDictionaries>
