--- a/Src/DiceGame/Views/MainWindow.xaml
+++ b/Src/DiceGame/Views/MainWindow.xaml
@@ -17,6 +17,7 @@
       <Setter Property="ItemsSource">
         <Setter.Value>
           <x:Array Type="{x:Type FrameworkElement}">
+            <TextBlock Text="-" />
             <diceGame:DiceControl Value="1" />
             <diceGame:DiceControl Value="2" />
             <diceGame:DiceControl Value="3" />
@@ -27,10 +28,14 @@
         </Setter.Value>
       </Setter>
     </Style>
+    <eddyfi:BooleanToCustomVisibilityConverter x:Key="BooleanToVisibilityCollapsedConverter" VisibilityIfFalse="Collapsed" VisibilityIfTrue="Visible" />
+
   </Window.Resources>
 
   <Grid Margin="{eddyfi:Thickness All=S}">
     <Grid.RowDefinitions>
+      <RowDefinition Height="{eddyfi:GridLength Size=Px32}" />
+      <RowDefinition Height="{eddyfi:GridLength Size=M}" />
       <RowDefinition Height="{eddyfi:GridLength Size=Px32}" />
       <RowDefinition Height="{eddyfi:GridLength Size=M}" />
       <RowDefinition Height="*" />
@@ -64,7 +69,37 @@
                VerticalAlignment="Center"
                HorizontalAlignment="Stretch" />
 
-    <StackPanel Grid.Row="2">
+    <Grid Grid.Row="2">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+      <ItemsControl ItemsSource="{Binding HandRoll.Dices}">
+        <ItemsControl.ItemsPanel>
+          <ItemsPanelTemplate>
+            <StackPanel Orientation="Horizontal" />
+          </ItemsPanelTemplate>
+        </ItemsControl.ItemsPanel>
+        <ItemsControl.ItemTemplate>
+          <DataTemplate>
+            <diceGame:DiceControl Value="{Binding Value}" />
+          </DataTemplate>
+        </ItemsControl.ItemTemplate>
+      </ItemsControl>
+      <Button Grid.Column="1"
+              Command="{Binding RollThisHandCommand}"
+              Visibility="{Binding PlayingHand, Converter={StaticResource BooleanToVisibilityCollapsedConverter}}"
+              Content="Roll"
+              HorizontalAlignment="Right" />
+    </Grid>
+
+    <Separator Grid.Row="3"
+               Height="2"
+               Margin="{eddyfi:Thickness LeftRight=S}"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Stretch" />
+
+    <StackPanel Grid.Row="4">
       <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto">
         <ItemsControl ItemsSource="{Binding RollSets}">
           <ItemsControl.ItemTemplate>
